# RpiGreenHouse

./: .gitignore  CMakeLists.txt  cutester.c  gpio.c  hgs.astylerc  main.c  main.cpp  mcp3008.c  mcp3008Spi.cpp  pump.h  socketComm.c  spidev_test.c
CC3200HemSens_ref/: main_spidemo_kann_empfangen.c
CC3200HumCapSens/: Anleitung Board flashen.docx  main.c
app/: CMakeLists.txt
app/client/: CMakeLists.txt  build.sh  dataB.c  dataB.h  fifo.h  main_client.c
app/server/: CMakeLists.txt  build.sh  build_utest.sh  cc3200CapSens.c  cc3200CapSens.h  gpio.h  main_server.c  mcp3008.c  mcp3008.h  pump.c  pump.h  spiComm.h
app/server/utest/: cutester.c  unittestc.h
client/: CMakeLists.txt  build.sh  dataB.h  main_client.c  mysqlWrapper.c  mysqlWrapper.h  socketClient.c  socketClient.h
config/: CMakeLists.user-tpl  CMakelists.user-tpl  build_project.sh  common.mk  external_toolgen.py  qtcreator_project.py  tester.mk
config/cmake/: external_toolgen.cmake  macros.cmake
config/configurations/: client.cmake  server.cmake  test.cmake
config/templates/: Doxygen.Doxyfile.tpl
server/: CMakeLists.txt  build.sh  cc3200CapSens.c  gpio.c  main_server.c  pump.c  socketComm.c  socketComm.h  spiComm.c  spiComm.h  unittestc.c
server/socket/: socketComm.c  socketComm.h
server/socket/utest/: socketTest.c
server/utest/: cutester.c
test/: build_utest.sh
web/: data.php  index.php  index.php.2  index.php.3
